tests/golden/external/external/external/01_keycloak_helmchart/keycloakx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    route.openshift.io/termination: passthrough
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: external
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 26.8.0
    helm.sh/chart: keycloakx-7.0.1
  name: keycloakx
  namespace: syn-external
spec:
  rules:
    - host: keycloak.example.com
      http:
        paths:
          - backend:
              service:
                name: keycloakx-http
                port:
                  name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - keycloak.example.com
      secretName: ingress-tls
