tests/golden/external/external/external/01_keycloak_helmchart/keycloakx/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: headless
    app.kubernetes.io/instance: keycloakx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/version: 26.8.0
    helm.sh/chart: keycloakx-7.0.1
  name: keycloakx-headless
  namespace: syn-external
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: keycloakx
    app.kubernetes.io/name: keycloakx
  type: ClusterIP
