tests/golden/external/external/external/01_keycloak_helmchart/keycloakx/templates/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: http
    app.kubernetes.io/instance: external
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 26.8.0
    helm.sh/chart: keycloakx-7.0.1
  name: keycloakx-http
  namespace: syn-external
spec:
  ports:
    - name: http-internal
      port: 9000
      protocol: TCP
      targetPort: http-internal
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/instance: keycloakx
    app.kubernetes.io/name: keycloakx
  type: ClusterIP
